commented example notebook.

--- a/example.ipynb
+++ b/example.ipynb
@@ -1,26 +1,67 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Anaglyph\n",
+    "\n",
+    "In this notebook we create some anaglyph gifs. We visualize the making of the animations by following the camera's trajectory with respect to the particles. \n",
+    "\n",
+    "First, import the libraries that we'll use."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glyph import particles, course\n",
     "import numpy as np\n",
-    "%matplotlib widget\n",
+    "#%matplotlib widget #uncomment to draw interactive plots\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the particle coordinates. These must be in an [n, 3] array, where n is the number of particles.\n",
+    "\n",
+    "Then instanciate the data as a 'particles' object.\n",
+    "\n",
+    "Take into account that the camera will be always be looking at the origin [0,0,0] of the reference frame, So you may want to put your particles around there..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = np.genfromtxt(\"subh_pos_box.dat\")\n",
     "cube = particles(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the camera trajectory\n",
+    "\n",
+    "Here comes the fun bit, let's define the trajectory of the camera. \n",
+    "\n",
+    "First instanciate an object 'course' providing an initial position (3 coord). Then add new trajectories setting the final position and, optionally, the number of steps to go to the new position (defaults to 30 steps).\n",
+    "\n",
+    "The new trajectories can follow different curves. Currently, the options available are:\n",
+    "\n",
+    "- 'line': sets an equally-spaced linear trajectory from the initial position to the final one.\n",
+    "\n",
+    "- 'circle': defines a trajectory over the maximum circle that passes through the initial position and the direction of the final position. Another way of thinking of this is that the camera follows the curve that results from the intersection of the plane defined by th initial and final position, and a sphere centred in the origin with radius |initial_position|\n",
+    "\n",
+    "After adding a trajectory, its final position becomes the initial one in order to form a continuous trail for the camera."
    ]
   },
   {
@@ -34,6 +75,13 @@
     "vid_cam.line([-10, 0, 5], steps=100)\n",
     "vid_cam.line([0, -10, 5], steps=100)\n",
     "vid_cam.line([10, 0, 5], steps=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We plot the camera trajectory (starting in purple and finishing in yellow) together with the set of particles. "
    ]
   },
   {
@@ -74,6 +122,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make a 3D-animation\n",
+    "\n",
+    "The method 'video_3D' of a 'particles' object outputs a gif with the animation. For this, the camera trajectory must be provided ('trajectory' method of a 'course' object, or any [m, 3] array with coordinates)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -95,6 +152,15 @@
    ],
    "source": [
     "cube.video_3D(vid_cam.trajectory, scale=1e-4, popout=3., perspective=1.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Another example with 'circle' trajectories\n",
+    "\n",
+    "(Any type of trajectory can be combined)"
    ]
   },
   {
